# gsv-tracker

./: .gitignore  CLAUDE.md  LICENSE.md  README.md  check_status_codes.py  cities.txt  cities_worldwide.txt  deploy_makelab1.sh  environment.yml  generate_json.py  gsv_compare_data.py  gsv_tracker.py  gsv_tracker_single.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_cities.py  streetscape_compare_data.py  streetscape_tracker.py  sync_data_to_server.sh  update_json_histograms.py  worldwide_candidates.csv  worldwide_frame.csv
_old/: analysis.ipynb  environment.yml
cities/: README.md  SUB-IP-EST2023-POP.xlsx  selected_cities.txt  us_census_city_analyzer.py
config/: scheduler.makelab1.toml  scheduler.toml
data/: alden_mn_width_1614_height_1623_step_20.json  cities.json  coupeville_wa_width_3562_height_2391_step_20.json  fall_city_wa_width_2895_height_2630_step_20.json  la-piedad_street_edge_endpoints.csv  la_conner_wa_width_1333_height_2092_step_20.json  oradell_street_edge_endpoints.csv  seattle_wa_width_17689_height_28145_step_20.json
data-old/: rename_script.py
data_sources/: README.md  gsv_coverage_regime.csv
deploy/: README.md
docs/: city_sampling.md  worldwide_sampling.md
download-capture-dates/: check_gsv_image_dates.py
gsv-bias-scraper/: README.md  environment.yml  gsv-metadata-scraper  scraper.py  setup.py
gsv_bias_scraper/: README.md  scraper.py  setup.py
gsv_metadata_tracker/: __init__.py  alerting.py  analysis.py  boundary_audit.py  cli.py  config.py  db.py  diff.py  download.py  download_async.py  download_gsv_history.py  download_mapillary.py  fileutils.py  geoutils.py  gsv.py  json_summarizer.py  naming.py  paths.py  scheduler.py  vis.py
gsv_street_analyzer/: __init__.py  analyze.py  city_streets.html  download_street_network.py  street_coverage.py
historic-dates/: environment.yml  scrap_historic_dates.py
ipynb-files/: 'Walking Street.ipynb
scripts/: apply_decisions.py  audit_city_boundaries.py  boundary_review.template.html  build_boundary_review.py  build_worldwide_frame.py  harvest_gsv_history.py  import_archival_scrapes.py  migrate_to_db.py  purge_tainted_runs.py  recompute_coverage_rates.py  recompute_run_stats.py  register_frame.py  reregister_boundaries.py
streetscape_metadata_tracker/: __init__.py  alerting.py  analysis.py  boundary_audit.py  cli.py  config.py  db.py  diff.py  download_common.py  download_gsv.py  download_gsv_history.py  download_mapillary.py  fileutils.py  geoutils.py  json_summarizer.py  naming.py  scheduler.py  vis.py
streetscape_street_analyzer/: __init__.py  analyze.py  collect.py  download_street_network.py  road_sampling.py  street_coverage.py
tests/: conftest.py  test_alerting.py  test_apply_decisions.py  test_archival_import.py  test_async_write_batch.py  test_async_write_batch2.py  test_boundary_audit.py  test_build_boundary_review.py  test_build_worldwide_frame.py  test_cli_policy.py  test_config.py  test_coverage.py  test_credential_redaction.py  test_db.py  test_deploy_scripts.py  test_diff.py  test_download_common.py  test_download_gsv_batch.py  test_download_guard.py  test_geoutils.py  test_gsv_history.py  test_gsv_resume.py  test_json_v2.py  test_mapillary.py  test_migration.py  test_naming.py  test_purge_tainted_runs.py  test_recompute_run_stats.py  test_reregister.py  test_road_sampling.py  test_run_cities.py  test_run_guard.py  test_scheduler.py  test_stats.py  test_street_analyze.py  test_street_coverage.py  test_streetwalk_collect.py  test_streetwalk_coverage.py  test_sync_data_script.py  test_vis.py
www/: .gitignore  city.html  city_prompt.txt  eslint.config.js  gsv_city_viewer.html  index.html  package-lock.json  package.json
(+100 files in other folders)
